tests/paczka1/small_fuzzy/13584107.err
Error in line 1: eCDHpSuMbAp A586 65,9
Error in line 7: 5soRU7x8 A79 22,2
